fix layout issues

--- a/app/assets/stylesheets/base/_base.css.scss
+++ b/app/assets/stylesheets/base/_base.css.scss
@@ -193,6 +193,7 @@ a:hover#help {
   #itineraries .span3 {
     width: 321px;
     margin-left: 18px;
+    &:first-child { margin-left: 0 }
   }
 }
 
